<resources>
    <string name="app_name">POD</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Search</string>
    <string name="hd">HD</string>
    <string name="yesterday">Вчера</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="today">Сегодня</string>
    <string name="theme_1">Тема 1</string>
    <string name="theme_2">Тема 2</string>
    <string name="theme_3">Тема 3</string>
    <string name="select_date">Выберите дату</string>
    <string name="cosmos">Космос</string>
    <string name="cosmos_info">The universe is all of space and time and their contents, including planets, stars, galaxies, and all other forms of matter and energy. The Big Bang theory is the prevailing cosmological description of the development of the universe. According to estimation of this theory, space and time emerged together 13.799±0.021 billion years ago, and the universe has been expanding ever since. While the spatial size of the entire universe is unknown, the cosmic inflation equation indicates that it must have a minimum diameter of 23 trillion light years, and it is possible to measure the size of the observable universe, which is approximately 93 billion light-years in diameter at the present day.</string>
    <string name="fab_content_description">see_photo</string>
    <string name="sun_photo">sun photo</string>
    <string name="mars_photo">mars photo</string>
    <string name="earth_photo">earth photo</string>
    <string name="notes">Заметки</string>
    <string name="title">Название</string>
    <string name="body">Описание</string>
    <string name="save">Сохранить</string>
</resources>