<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lines="5"
        android:hint="@string/body"

        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"

        app:layout_constraintTop_toBottomOf="@id/etNoteBody"
        />

</androidx.constraintlayout.widget.ConstraintLayout>