<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SettingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupForTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginTop="@dimen/settings_fragment_top_margin_content"
        android:layout_marginStart="@dimen/settings_fragment_side_margin"
        android:layout_marginEnd="@dimen/settings_fragment_side_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTheme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_1"
            app:chipBackgroundColor="@color/myBackgroundColor"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_2"
            app:chipBackgroundColor="@color/myBackgroundColor2"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTheme3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_3"
            app:chipBackgroundColor="@color/myBackgroundColor3"
            />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>